--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -68,6 +68,8 @@ jobs:
           ARM_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
           ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
           TF_TOKEN_app_terraform_io: ${{ secrets.TFC_TOKEN }}
+          TF_VAR_app_secret_key: ${{ secrets.APP_SECRET_KEY }}
+          TF_VAR_app_salt_key: ${{ secrets.APP_SALT_KEY }}
         run: |
           terraform fmt -check || true      # verifica formatação (não falha se errado)
           terraform validate -no-color      # valida sintaxe do código
@@ -132,4 +134,6 @@ jobs:
           ARM_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
           ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
           TF_TOKEN_app_terraform_io: ${{ secrets.TFC_TOKEN }}
+          TF_VAR_app_secret_key: ${{ secrets.APP_SECRET_KEY }}
+          TF_VAR_app_salt_key: ${{ secrets.APP_SALT_KEY }}
         run: terraform apply -auto-approve tfplan
